[gd_scene load_steps=3 format=3 uid="uid://ntd2s2fecpg5"]

[ext_resource type="Script" uid="uid://d1ygrqb77ocgk" path="res://Scene/Menu/settings.gd" id="1_rukqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rukqk"]
bg_color = Color(0.3403393, 0.34033936, 0.34033918, 1)

[node name="Settings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rukqk")
script = ExtResource("1_rukqk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 50
text = "Settings"
horizontal_alignment = 1

[node name="Volume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Name" type="RichTextLabel" parent="VBoxContainer/Volume"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Volume"

[node name="Slider" type="HSlider" parent="VBoxContainer/Volume"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
size_flags_horizontal = 4
step = 5.0
value = 100.0
tick_count = 10
ticks_on_borders = true
ticks_position = 3

[node name="Luminosity" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Name" type="RichTextLabel" parent="VBoxContainer/Luminosity"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Luminosity"

[node name="Slider" type="HSlider" parent="VBoxContainer/Luminosity"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
size_flags_horizontal = 4
min_value = 25.0
step = 5.0
value = 100.0
tick_count = 10
ticks_on_borders = true
ticks_position = 3

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="VBoxContainer/Volume/Slider" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Luminosity/Slider" to="." method="_on_luminosity_value_changed"]
